# rtc-pattern-recognition

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  download_model.sh  run.sh  run_advanced.sh  run_fifo_all.sh  run_fifo_conv.sh  run_not_stressed.sh  run_stressed.sh  xbash.sh
hdr/: message.hpp  pqueue.hpp  semaphoreop.hpp
include/: configure.hpp  converter.hpp  displaywindow.hpp  generator.hpp  message.hpp  pqueue.hpp  semaphoreop.hpp
src/: CMakeLists.txt  camProducer.cpp  cleanup.c  configure.cpp  converter.cpp  destroyer.cpp  displayer.cpp  displaywindow.cpp  generator.cpp  initializer.cpp  pqueue.cpp  semaphoreop.cpp  setbuf.c
visuals/: visuals.py
